--- a/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/initProgJS.html
+++ b/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/initProgJS.html
@@ -8,12 +8,11 @@
   <title>Graduate développeur PHP/Symfony</title>
 </head>
 <body>
-  <header></header>
+  <header><p><a href="../../index.html">Retour</a></p></header>
   <main>
     <nav>
       <section class="return" >
         <h2 class="sub-title-h2">Sommaire</h2>
-        <a href="../../index.html">Retour</a>
       </section>
       <ul><li><a href="objet-date.html">Initiation à la programmation Javascript</a></li></ul>
       </nav>
