--- a/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/initProgJSMenu.html
+++ b/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/initProgJSMenu.html
@@ -8,12 +8,13 @@
   <title>Graduate développeur PHP/Symfony</title>
 </head>
 <body>
-  <header></header>
+  <header>
+    <p class="bgc-up"><a href="../../index.html">Retour</a></p>
+  </header>
   <main>
     <nav>
       <section class="return" >
         <h2 class="sub-title-h2">Sommaire</h2>
-        <a href="../../index.html">Retour</a>
       </section>
       <ul><li><a href="#">Créer un site web avec HTML, CSS et le Framework Bootstrap</a></li></ul>
       <ul><li><a href="initProgJSMenu2.html">Initiation à la programmation Javascript</a></li></ul>
