--- a/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/initProgJSMenu2.html
+++ b/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/initProgJSMenu2.html
@@ -8,12 +8,13 @@
   <title>Graduate développeur PHP/Symfony</title>
 </head>
 <body>
-  <header></header>
+  <header>
+    <p class="bgc-up"><a href="initProgJSMenu.html">Retour</a></p>
+  </header>
   <main>
     <nav>
       <section class="return" >
         <h2 class="sub-title-h2">Sommaire</h2>
-        <a href="initProgJSMenu.html">Retour</a>
       </section>
       <ul><li><a href="les-dates.html">Les dates</a></li></ul>
       <ul><li><a href="objet-js.html">Les objets JavaScript</a></li></ul>
