--- a/site/002-Developpeur_PHP_Symfony/02-Decouvrir_la_programmation/decouvProg.html
+++ b/site/002-Developpeur_PHP_Symfony/02-Decouvrir_la_programmation/decouvProg.html
@@ -8,12 +8,13 @@
   <title>Graduate développeur PHP/Symfony</title>
 </head>
 <body>
-  <header></header>
+  <header>
+    <p class="bgc-up"><a href="../../index.html">Retour</a></p>
+  </header>
   <main>
     <nav>
       <section class="return" >
         <h2 class="sub-title-h2">Sommaire</h2>
-        <a href="../../index.html">Retour</a>
       </section>
       <ul><li><a href="algorithmes_classiques.html">Algorythmes classiques</a></li></ul>
       </nav>
