Modify variable vs valeur

--- a/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/initProgJSMenu2.html
+++ b/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/initProgJSMenu2.html
@@ -18,6 +18,7 @@
       </section>
       <ul><li><a href="les-dates.html">Les dates</a></li></ul>
       <ul><li><a href="objet-js.html">Les objets JavaScript</a></li></ul>
+      <ul><li><a href="variable_vs_valeurs.html">Variable versus valeur</a></li></ul>
       </nav>
   </main>
 </body>
