Add ouverturePython.html file

--- a/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/initProgJSMenu2.html
+++ b/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/initProgJSMenu2.html
@@ -16,9 +16,23 @@
       <section class="return" >
         <h2 class="sub-title-h2">Sommaire</h2>
       </section>
-      <ul><li><a href="les-dates.html">Les dates</a></li></ul>
-      <ul><li><a href="objet-js.html">Les objets JavaScript</a></li></ul>
-      <ul><li><a href="variable_vs_valeurs.html">Variable versus valeur</a></li></ul>
+      <ul class="ul-p17 li-empty">
+        <li>
+          <a href="les-dates.html">Les dates</a>
+        </li>
+        <li>
+          <a href="objet-js.html">Les objets JavaScript</a>
+        </li>
+        <li>
+          <a href="variable_vs_valeurs.html">Variable versus valeur</a>
+        </li>
+        <li>
+          <a href="gestion_bug.html">Gestion des bugs : stratégies générales</a>
+        </li>
+        <li>
+          <a href="testUnitFonc.html">Les notions de test unitaire et test fonctionnel</a>
+        </li>
+      </ul>
       </nav>
   </main>
 </body>
