Add ouverturePython.html file

--- a/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/initProgJSMenu2.html
+++ b/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/initProgJSMenu2.html
@@ -32,6 +32,9 @@
         <li>
           <a href="testUnitFonc.html">Les notions de test unitaire et test fonctionnel</a>
         </li>
+        <li>
+          <a href="ouverturePython.html">Ouverture vers un autre langage de programmation : Python</a>
+        </li>
       </ul>
       </nav>
   </main>
