Modify links to index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Ce site présente mes notes de cours sur ma formation STUDI de Graduate développeur PHP / Symfony.">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/site/style.css">
   <title>Graduate développeur PHP/Symfony</title>
 </head>
 <body class="container">
@@ -14,11 +14,11 @@
   </header>
   <main>
     <section class="relative flex-v-center">
-      <img class="img-logo" src="images/code.jpg" alt="Code">
+      <img class="img-logo" src="site/images/code.jpg" alt="Code">
       <ul class="training-bloc">
-        <li><a href= "001-Front-end/01-Initiation_a_la_programmation_Javascript/initProgJSMenu.html">Développement front-End</a></li>
+        <li><a href= "site/001-Front-end/01-Initiation_a_la_programmation_Javascript/initProgJSMenu.html">Développement front-End</a></li>
         <li><a href= "#">Développement back-End</a></li>
-        <li><a href= "002-Developpeur_PHP_Symfony/02-Decouvrir_la_programmation/decouvProg.html">Découvrir la programmation</a></li>
+        <li><a href= "site/002-Developpeur_PHP_Symfony/02-Decouvrir_la_programmation/decouvProg.html">Découvrir la programmation</a></li>
       </ul>
     </section>
   </main>
