--- a/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/initProgJSMenu.html
+++ b/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/initProgJSMenu.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <p class="bgc-up"><a href="../../index.html">Retour</a></p>
+    <p class="bgc-up"><a href="/index.html">Retour</a></p>
   </header>
   <main>
     <nav>
