--- a/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/initProgJS.html
+++ b/site/001-Front-end/01-Initiation_a_la_programmation_Javascript/initProgJS.html
@@ -8,7 +8,7 @@
   <title>Graduate développeur PHP/Symfony</title>
 </head>
 <body>
-  <header><p><a href="../../index.html">Retour</a></p></header>
+  <header><p><a href="/index.html">Retour</a></p></header>
   <main>
     <nav>
       <section class="return" >
