--- a/site/002-Developpeur_PHP_Symfony/02-Decouvrir_la_programmation/decouvProg.html
+++ b/site/002-Developpeur_PHP_Symfony/02-Decouvrir_la_programmation/decouvProg.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <p class="bgc-up"><a href="../../index.html">Retour</a></p>
+    <p class="bgc-up"><a href="/index.html">Retour</a></p>
   </header>
   <main>
     <nav>
