--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Ce site présente mes notes de cours sur ma formation STUDI de Graduate développeur PHP / Symfony.">
-  <link rel="stylesheet" href="/site/style.css">
+  <link rel="stylesheet" href="site/style.css">
   <title>Graduate développeur PHP/Symfony</title>
 </head>
 <body class="container">
