Add icon home in index.html file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
   <title>Graduate développeur PHP/Symfony</title>
 </head>
 <body class="container">
-  <header>
+  <header class="header-div">
+    <div class="div-header li">
+      <lu>
+        <li class="home active">Accueil</li>
+        <li>Ma formation</li>
+      </lu>
+    </div>
     <h1>Graduate développeur PHP/Symfony</h1>
   </header>
   <main>
