Add and rename dynSiteWebJSMenu.html

--- a/site/001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/dynSiteWebJSMenu.html
+++ b/site/001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/dynSiteWebJSMenu.html
@@ -9,22 +9,18 @@
 </head>
 <body>
   <header>
-    <p class="bgc-up"><a href="../../../index.html">Retour</a></p>
+    <p class="bgc-up"><a href="initProgJSMenu.html">Retour</a></p>
   </header>
   <main>
     <nav>
       <section class="return" >
         <h2 class="sub-title-h2">Sommaire</h2>
       </section>
-      <ol>
-        <li><a href="#">Créer un site web avec HTML, CSS et le Framework Bootstrap</a></li>
-        <li><a href="initProgJSMenu2.html">Initiation à la programmation Javascript</a></li>
+      <ul class="ul-p17 li-empty">
         <li>
-          <a href="../03-Dynamiser_vos_sites_web_avec_Javascript/initDynSiteWebJSMenu.html">Dynamiser vos sites web avec 
-            Javascript
-          </a>
+          <a href="les-dates.html">Les dates</a>
         </li>
-      </ol>
+      </ul>
       </nav>
   </main>
 </body>
