Modify dynSiteWebJSMenu.html link

--- a/site/001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/dynSiteWebJSMenu.html
+++ b/site/001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/dynSiteWebJSMenu.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <p class="bgc-up"><a href="initProgJSMenu.html">Retour</a></p>
+    <p class="bgc-up"><a href="../02-Initiation_a_la_programmation_Javascript/initProgJSMenu.html">Retour</a></p>
   </header>
   <main>
     <nav>
