--- a/site/001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/dynSiteWebJSMenu.html
+++ b/site/001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/dynSiteWebJSMenu.html
@@ -18,7 +18,7 @@
       </section>
       <ul class="ul-p17 li-empty">
         <li>
-          <a href="les-dates.html">Les dates</a>
+          <a href="prog-event.html">La programmation événementielle en Javascript</a>
         </li>
       </ul>
       </nav>
